--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Mayur Dhamgunde - Full-Stack Developer specializing in Web, AI, and Blockchain technologies" />
     <title>Mayur Dhamgunde | Software Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      if (!localStorage.getItem("theme") || localStorage.getItem("theme") === "dark") {
+        document.documentElement.classList.add("dark");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
